--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "index.js",
   "author": "iShawnWang",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@types/mathjs": "^6.0.11",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.3",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "decimal.js": "^10.2.1",
     "mathjs": "^9.3.0"
   }
 }
